k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profitei-api
spec:
  selector:
    matchLabels:
      app: profitei-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: profitei-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: profitei-api
        image: evmartinelli/profitei
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi" 
            cpu: "200m"
            ephemeral-storage: "1Gi"
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          httpGet:
            port: 3000
            path: /health
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          httpGet:
            port: 3000
            path: /health
        volumeMounts:
          - name: google-cloud-key
            mountPath: "/var/secrets/google"
            readOnly: true
      volumes:
        - name: google-cloud-key
          secret:
            secretName: profitei-secrets-cchk2gcd4b
            items:
              - key: FIREBASE_ADMIN_SDK
                path: profitei-firebase-adminsdk-ikxkn-c7414886c1.json
