k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profitei-service
spec:
  selector:
    app: profitei-api
  ports:
  - port: 3000
